# nightdrive

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  musicgen-server.py
.claude/agents/: album-composer.md  arranger.md  bench-runner.md  coverage-matrix.md  honesty-auditor.md  roadmap-tracker.md  witness-test-author.md
bench/pipeline_one_track/: run_all.ps1
config/: nightdrive-acestep-cnc.toml  nightdrive-acestep.toml  nightdrive.toml.example
crates/nightdrive-album-composer/: Cargo.toml
crates/nightdrive-album-composer/src/: danger_zone.rs  lib.rs  prompt.rs  schema.rs
crates/nightdrive-album-composer/tests/: danger_zone_test.rs  real_compose.rs
crates/nightdrive-art/: Cargo.toml
crates/nightdrive-art/src/: lib.rs
crates/nightdrive-audio-gen/: Cargo.toml
crates/nightdrive-audio-gen/src/: lib.rs  prompt.rs
crates/nightdrive-audio-master/: Cargo.toml
crates/nightdrive-audio-master/src/: lib.rs
crates/nightdrive-cli/: Cargo.toml
crates/nightdrive-cli/src/: main.rs
crates/nightdrive-core/: Cargo.toml
crates/nightdrive-core/src/: backlog.rs  config.rs  lib.rs  observability.rs  retry.rs  telegram.rs
crates/nightdrive-core/tests/: backlog_test.rs
crates/nightdrive-encoder/: Cargo.toml
crates/nightdrive-encoder/src/: lib.rs  weather.rs
crates/nightdrive-encoder/tests/: tokyo_encode_live.rs
crates/nightdrive-llm/: Cargo.toml
crates/nightdrive-llm/src/: lib.rs
crates/nightdrive-openclaw-main/: Cargo.toml
crates/nightdrive-openclaw-main/src/: lib.rs
crates/nightdrive-openclaw-main/tests/: real_endpoint.rs
crates/nightdrive-orchestrator/: Cargo.toml
crates/nightdrive-orchestrator/src/: main.rs
crates/nightdrive-stems/: Cargo.toml
crates/nightdrive-stems/src/: lib.rs
crates/nightdrive-storage/: Cargo.toml
crates/nightdrive-storage/migrations/: 20260510000000_init.sql  20260524000000_thumbnail_state.sql
crates/nightdrive-storage/src/: lib.rs
crates/nightdrive-visuals/: Cargo.toml
crates/nightdrive-visuals/src/: lib.rs
crates/nightdrive-youtube/: Cargo.toml
crates/nightdrive-youtube/src/: bootstrap.rs  lib.rs
docs/: BENCH_LEDGER.md  ROADMAP.md  acestep-prompting.md  album-backlog.json  album-danger-zone.json  audio_gen_deepdive_2026-05-16.md  candle-backend-exploration.md  prompting-and-orchestration.md
docs/albums/: abyssal-station-vol-1.json  agartha-vol-1.json  atlantis-vol-1.json  atompunk-drive-vol-1.json  atompunk-drive-vol-2.json  aurora-icebreaker-vol-1.json  berlin-wall-vol-1.json  berlin-wall-vol-2.json  blade-runner-2049-vol-1.json  blade-runner-2049-vol-2.json  chrome-mirage-vol-1.json  dyson-tomb-vol-1.json  gate-of-ra-vol-1.json  hollow-earth-vol-1.json  miami-vice-vol-1.json  miami-vice-vol-2.json  neo-tokyo-drive-vol-1.json  neo-tokyo-drive-vol-2.json  neon-cathedral-vol-1.json  obsidian-caldera-vol-1.json  sovetskiy-drive-vol-1.json  sovetskiy-drive-vol-2.json  sunset-drive-vol-1.json  sunset-drive-vol-2.json  telos-shasta-vol-1.json  tokyo-cyberpunk-vol-1.json  tokyo-cyberpunk-vol-2.json  tron-drive-vol-1.json  tron-drive-vol-2.json  velvet-casino-vol-1.json
docs/superpowers/plans/: 2026-05-10-discipline-stack.md  2026-05-24-autonomous-album-mode.md
docs/superpowers/specs/: 2026-05-10-discipline-stack-design.md  2026-05-24-autonomous-album-mode-design.md  2026-06-06-lost-worlds-saga-design.md
scripts/: audit.ps1  check-cnc-drift.sh  deploy-cnc.sh  install_acestep.ps1  install_acestep.sh  nightdrive-acestep.service  nightdrive-album-drop.service  nightdrive-album-drop.timer  nightdrive-nightly.service  nightdrive-nightly.timer  nightdrive-theme-propose.service  nightdrive-theme-propose.timer  nightdrive-thumbnail-retry.service  nightdrive-thumbnail-retry.timer  wait-gpu-free.sh
scripts/patches/: acestep-vae-device-aware-decode.patch
sidecar/: acestep_server.py  generate_album_covers_native.py  generate_cover_library.py  musicgen_server.py  stable_audio_server.py  wallpaper_pack.py
tests/witnesses/: Cargo.toml  README.md  ace_step_real_sidecar.rs  art_real_sdxl.rs  cli_db_migrate.rs  cli_export_album.rs  core_loads_real_config.rs  llm_real_ollama.rs  resume_skips_terminal_tracks.rs  retry_recovers_transient_500.rs  stems_real_demucs.rs  storage_roundtrip.rs  youtube_resume_upload.rs
var/nightdrive/tracks/nd-20260511-001/: forecast.json  spec.json
visualizer/: index.html
