[package]
name = "nightdrive-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nightdrive-cli"
path = "src/main.rs"

[dependencies]
nightdrive-core.workspace = true
nightdrive-storage.workspace = true
nightdrive-youtube.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
