[package]
name = "nightdrive-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nightdrive-cli"
path = "src/main.rs"

[dependencies]
nightdrive-core.workspace = true
nightdrive-storage.workspace = true
nightdrive-youtube.workspace = true
nightdrive-stems.workspace = true
nightdrive-openclaw-main = { path = "../nightdrive-openclaw-main" }
nightdrive-album-composer = { path = "../nightdrive-album-composer" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
