[package]
name = "nightdrive-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
toml.workspace = true
tokio.workspace = true
fs2 = "0.4"

[dev-dependencies]
tempfile.workspace = true
